--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  padding: 5%;
+  text-align: left;
 }
 
 .App-logo {
@@ -24,6 +26,157 @@
   color: white;
 }
 
+.modal{
+  position:fixed;
+  background-color: white;
+  border: 1px solid gray;
+  top: 0;
+  left: 0;
+  min-width: 85%;
+  min-height: 60%;
+  margin: 50px;
+  overflow:scroll;
+  max-height: 80%;
+}
+
+.socialLinks a{
+  margin-right: 20px;
+}
+
+.exit{
+  justify-content: flex-end;
+  align-self: flex-end;
+  float: right;
+  margin-right: 20px;
+  border: none;
+  width: 30px;
+  padding: 5px;
+  border-radius: 100%;
+}
+.modalTitle{
+  text-align: center;
+  color:black;
+  position: relative;
+  display: block;
+
+}
+
+.filterContainer {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.simpleAlert {
+  border-left: 2px solid rgb(255, 217, 0);
+  background-color: rgba(255, 201, 100, 0.614);
+  border-radius: 10px;
+  padding: 10px;
+  width: 95%;
+  font-style: italic;
+  font-size: small;
+}
+
+.simpleError {
+  border-left: 2px solid red;
+  background-color: rgba(255, 152, 121, 0.614);
+  border-radius: 10px;
+  padding: 10px;
+  width: 95%;
+  font-style: italic;
+  font-size: small;
+}
+
+.table tr {
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.modalProfile{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  align-self: center;
+  text-align: center;
+}
+
+input {
+  padding: 10px;
+  border: none;
+}
+
+button {
+  padding: 10px;
+  border: none;
+}
+
+.modalContents{
+  margin: 20px;
+}
+.loading{
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  opacity: 50%;
+  text-align: center;
+  position: fixed;
+  top:0;
+  left:0;
+}
+
+.lds-circle {
+  display: inline-block;
+  transform: translateZ(1px);
+  opacity: 100%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.lds-circle > div {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  background: rgb(241, 181, 83);
+  animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+@keyframes lds-circle {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
+  }
+}
+
+
+table{
+  border: 2px solid gray;
+  width: 100%;
+}
+thead tr th{
+  border-bottom: 1px solid black;
+  min-width: 30%;
+}
+tr{
+  padding: 2px;
+  margin-top: 5px;
+}
+tr:hover{
+  background-color: rgba(170, 170, 170, 0.138);
+  cursor: pointer;
+}
 .App-link {
   color: #61dafb;
 }
